traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-allowlist-single-cidr.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-allowlist-single-cidr
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/allowlist-source-range: "192.168.1.0/24"

spec:
  ingressClassName: nginx
  rules:
    - host: allowlist-source-range.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
